--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8081
-
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.password=emiw2003
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
