--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,1 +1,8 @@
 server.port=8082
+
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
+spring.datasource.password=emiw2003
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
