--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.password=emiw2003
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+spring.liquibase.change-log=liquibase/changelog-master.yml
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
