--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=8081
+url = http://localhost:8082
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.password=emiw2003
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.liquibase.change-log=liquibase/changelog-master.yml
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+server.servlet.context-path=/
+feign.httpclient.disable-ssl-validation=true
+feign.client.config.default.connect-timeout=30000
+feign.client.config.default.read-timeout=360000
+feign.client.config.default.logger-level = basic
+api-key =9fadd2b6341286391074fc52d091fe18
